--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
   color: #546E7A;
   font-size: 14px;
   font-weight: 400;
-  background: #fff;
+  background-color: #FDEBE8;
   overflow-x: hidden;
 }
 
@@ -22,10 +22,11 @@ html {
 
 p {
   font-size: 14px;
-  color: #546E7A;
+  color: #393A3A;
   line-height: 26px;
   font-family: 'Poppins', sans-serif;
   margin-bottom: 0;
+  font-weight: 600;
 }
 
 a:hover, a:focus {
@@ -557,8 +558,8 @@ button:focus {
   width: 50%;
 }
 
-.navbar-brand img {
-  max-width: 115px;
+.navbar-brand {
+  max-width: 200px;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:focus,
@@ -584,7 +585,7 @@ button:focus {
 }
 
 .navbar-expand-md .navbar-toggler i {
-  color: #fff !important;
+  color: #3e3a3a !important;
 }
 
 .mainmenu-area .navbar-nav .nav-link {
@@ -592,7 +593,7 @@ button:focus {
 }
 
 .collapse.show {
-  background: #3e3a3a;
+  background: #fff;
   margin-bottom: 10px;
   -webkit-transition: 0.6s;
   -moz-transition: 0.6s;
@@ -693,7 +694,7 @@ button:focus {
   display: block;
   height: auto;
   max-width: 100%;
-  background-color: white;
+  background-color: #FDEBE8;
   margin-top: -30px;
 }
 
@@ -1170,16 +1171,12 @@ button:focus {
 }
 
 .iconoServicio{
-  height: 50px;
-}
-
-.mano {
-  height: 45px;
+  width: 200px;
 }
 
 .item-boxes h4 {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 15px;
 }
 
@@ -1188,7 +1185,6 @@ button:focus {
 }
 
 .item-boxes:hover {
-  background: transparent;
   box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.35);
 }
 
@@ -1290,6 +1286,23 @@ button:focus {
   transform: scale(1.1);
 }
 
+#features .section-subtitle  {
+  margin-left: 30px;
+}
+
+#features .btn {
+  margin-top: 15px;
+  background-color: #374432;
+  padding: 15px 60px 15px 60px;
+  border-radius: 70px;
+  font-size: 20px;
+}
+
+.imgFeatures {
+  width: 600px;
+  border-radius: 125px 0px 125px 0px
+}
+
 .featured-bg {
   background: #fafafa;
 }
@@ -1373,7 +1386,6 @@ button:focus {
 }
 
 .featured-box .featured-content {
-  padding-left: 40px;
   position: relative;
 }
 
@@ -1593,15 +1605,28 @@ button:focus {
 /* ==========================================================================
   Pricing Table
   ========================================================================== */
+  #pricing {
+    background-image: url(../img/pricing/fondo\ nuevo-01.png);
+    background-size: 100%;
+    padding-bottom: 168px;
+  }
+
+  .pricing-section h2 {
+    color: #FCEBE7;
+  }
+
+  .pricing-section p {
+    font-size: 20px;
+    color: #393A3A;
+  }
+
 .pricing-table {
   padding: 20px 0px 0px;
   margin: 0 auto;
   margin-bottom: 5px;
-  border: 1px solid #eaeaea;
   text-align: center;
-  border-radius: 4px;
-  background-color: #FFFFFF;
-  box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
+  background-color: #FCEBE7;
+  box-shadow: 0px 10px 50px 0px rgba(61, 40, 42, 0.15);
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
@@ -1609,47 +1634,37 @@ button:focus {
 }
 
 .pricing-table:hover {
-  box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.35);
+  box-shadow: 0px 10px 50px 0px rgba(38, 48, 53, 0.35);
 }
 
 .pricing-table .pricing-details h2 {
-  font-size: 18px;
-  color: #546E7A;
-  font-weight: 500;
-  padding-top: 15px;
+  font-size: 36px;
+  color: #65652C;
+  font-weight: 700;
   padding-bottom: 15px;
+  margin-top: -20px;
 }
 
 .pricing-table .pricing-details .price {
-  color: #263238;
-  font-size: 36px;
-  line-height: 40px;
-  font-weight: 500;
-  letter-spacing: -1px;
-  background-color: #fff !important;
-  border-bottom: 1px solid #e9edf2;
-  padding-bottom: 40px;
-}
-
-.pricing-table .pricing-details .price span {
-  font-size: 12px;
-  line-height: 15px;
-  font-weight: 400;
-  color: #A2A2A2;
+  padding-top: 40px;
 }
 
 .pricing-table .pricing-details ul li {
-  padding: 12px;
+  margin-top: 10px;
+  padding: 6px;
   font-size: 14px;
-}
-
-.pricing-table .pricing-details ul li:nth-child(even) {
-  background-color: #f9f9f9;
+  font-weight: bolder;
+  color: #393A3A;
+  line-height: 10px;
 }
 
 .pricing-table .plan-button {
   padding: 30px 0;
-  background: #f9f9f9;
+  padding-top: 0px;
+}
+
+.plan-button .btn {
+  background-color: #37422B;
 }
 
 .pricing-big {
@@ -1657,6 +1672,14 @@ button:focus {
   -moz-transform: scale3d(1.1, 1.1, 1.1);
   transform: scale3d(1.1, 1.1, 1.1);
 }
+
+.imgPricing {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  background-color: #FDEBE8;
+  margin-top: -30px;
+} 
 
 /* ==========================================================================
   Slider
@@ -1786,7 +1809,7 @@ button:focus {
 }
 
 #slider-area .about-info p {
-  color: #333;
+  color: #393A3A;
 }
 
 .contents p {
