--- a/css/responsive.css
+++ b/css/responsive.css
@@ -112,6 +112,7 @@
   .navbar-expand-md .navbar-brand, .navbar-expand-md .navbar-toggler {
     margin: 12px 15px;
   }
+
   .navbar-expand-md .navbar-nav .active > .nav-link, .navbar-expand-md .navbar-nav .nav-link.active, .navbar-expand-md .navbar-nav .nav-link.active::before, .navbar-expand-md .navbar-nav .nav-link.open, .navbar-expand-md .navbar-nav .open > .nav-link {
     background: #ddd;
   }
@@ -257,6 +258,9 @@
   .mainmenu-area .menu-button {
     display: none;
   }
+  .navbar-brand {
+    max-width: 120px;
+  }
   .navbar-expand-md .navbar-nav .nav-link::before {
     display: none;
   }
@@ -275,7 +279,8 @@
     top: 40%;
   }
   #carousel-area .carousel-item .carousel-caption h3 {
-    font-size: 13px;
+    font-size: 12px;
+    line-height: 14px;
   }
   #carousel-area .carousel-item .carousel-caption h2 {
     font-size: 18px;
@@ -329,6 +334,9 @@
   }
   .single-team {
     margin-bottom: 30px;
+  }
+  #pricing{
+    background-color: #93C294!important;
   }
   .pricing-tables .pricing-table {
     margin-bottom: 30px;
