--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,17 @@
    ========================================================================== */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700|Open+Sans");
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=Poppins:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Playfair+Display:wght@500&display=swap');
 
 /* ==========================================================================
    2. GENERAL
    ========================================================================== */
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
   color: #546E7A;
   font-size: 14px;
   font-weight: 400;
-  background-color: #FDEBE8;
+  background-color: #FFE6C2;
   overflow-x: hidden;
 }
 
@@ -21,12 +22,11 @@ html {
 }
 
 p {
-  font-size: 14px;
+  font-size: 20px;
   color: #393A3A;
   line-height: 26px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
   margin-bottom: 0;
-  font-weight: 600;
 }
 
 a:hover, a:focus {
@@ -42,14 +42,14 @@ a {
 }
 
 h1, h2 {
-  font-family: 'Italiana', serif;
+  font-family: 'Playfair Display', serif;
   font-size: 60px;
   font-weight: 600;
-  color: #374432;
+  color: #013D25;
 }
 
 h3, h4, h5 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
   font-size: 50px;
   font-weight: 700;
   color: #263238;
@@ -103,7 +103,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 .section-header .section-title {
   margin-top: 50px;
   margin-bottom: 20px;
-  color: #606538;
+  color: #013D25;
   position: relative;
 }
 
@@ -121,7 +121,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   bottom: -8px;
   width: 80px;
   height: 2px;
-  background: #606538;
+  background: #013D25;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
@@ -131,7 +131,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   font-size: 60px;
   color: rgba(0, 0, 0, 0.07);
   z-index: 2;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
   font-weight: 500;
   text-transform: capitalize;
   position: absolute;
@@ -164,7 +164,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .btn-common {
-  background-color: #F97794;
+  background-color: #013D25;
   position: relative;
   z-index: 1;
   padding: 12px 32px;
@@ -406,7 +406,7 @@ button:focus {
   font-size: 14px;
   text-align: center;
   border-radius: 30px;
-  background-color: #37422B;
+  background-color: #013D25;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -484,11 +484,11 @@ button:focus {
 }
 
 .menu-bg .navbar-nav .nav-link:hover {
-  color: #606538 !important;
+  color: #013D25 !important;
 }
 
 .menu-bg .navbar-nav .active {
-  color: #606538 !important;
+  color: #013D25 !important;
 }
 
 .menu-button:hover {
@@ -509,11 +509,11 @@ button:focus {
 
 .bg-white .menu-button:hover {
   cursor: pointer;
-  color: #606538;
+  color: #013D25;
 }
 
 .bg-white .logo-menu a {
-  color: #606538;
+  color: #013D25;
 }
 
 .bg-white .navbar-nav .nav-link {
@@ -521,11 +521,11 @@ button:focus {
 }
 
 .bg-white .navbar-nav .nav-link:hover {
-  color: #606538 !important;
+  color: #013D25 !important;
 }
 
 .bg-white .navbar-nav .active {
-  color: #606538 !important;
+  color: #013D25 !important;
 }
 
 .close-button {
@@ -547,7 +547,7 @@ button:focus {
   left: 0;
   width: 0;
   height: 2px;
-  background: #606538;
+  background: #013D25;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
@@ -565,7 +565,7 @@ button:focus {
 .navbar-expand-md .navbar-nav .nav-link:focus,
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover:before {
-  color: #606538;
+  color: #013D25;
 }
 
 .navbar-expand-md .navbar-nav .active > .nav-link,
@@ -573,11 +573,11 @@ button:focus {
 .navbar-expand-md .navbar-nav .nav-link.active:before,
 .navbar-expand-md .navbar-nav .nav-link.open,
 .navbar-expand-md .navbar-nav .open > .nav-link {
-  color: #606538;
+  color: #013D25;
 }
 
 .navbar-expand-md .navbar-toggler {
-  color: #606538;
+  color: #013D25;
   border-radius: 0px;
   margin: 5px;
   cursor: pointer;
@@ -629,7 +629,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #374432;;
+  background: #013D25;
   opacity: 0.7;
 }
 
@@ -687,6 +687,43 @@ button:focus {
   display: block;
   height: auto;
   max-width: 100%;
+}
+
+.hero {
+  background-color: #C1DEBC;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.hero h3{
+  font-size: 30px!important;
+}
+
+.hero a {
+  margin-top: 50px!important;
+  padding: 15px 80px 15px 80px;
+  border-radius:150px;
+  font-size: 30px;
+
+}
+
+.hero-text {
+  padding: 100px; /* Ajusta el espaciado según tus preferencias */
+  padding-top: 200px;
+}
+
+@media (max-width: 768px) {
+  /* Cambia el diseño a apilado en dispositivos móviles */
+  .hero-text {
+      padding: 20px; /* Ajusta el espaciado para dispositivos móviles */
+  }
+
+  .hero-image {
+      display: block;
+      margin: 0 auto; /* Centra la imagen en dispositivos móviles */
+  }
 }
 
 .imgCarousel {
@@ -877,8 +914,23 @@ button:focus {
 /* ==========================================================================
   About Section Style
    ========================================================================== */
+
+   .descuento {
+    background-color: #FDCB79 ;
+  background-image: url(../img/bg/promo-02.png);
+  background-repeat: no-repeat;
+  background-size:100%;
+  background-position: bottom;
+   }
+
+   .textodetalle {
+    font-weight: 500!important;
+   }
+
+
 #about {
   position: relative;
+  background-color: #FDCB79!important;
 }
 
 #about .box-item {
@@ -1082,14 +1134,14 @@ button:focus {
 .controls .active {
   color: rgb(255, 253, 247) !important;
   border-color: rgb(255, 253, 247);
-  background-color: #374432!important;
+  background-color: #013D25!important;
   color: white;
 }
 
 .btngaleria {
   background-color: transparent!important;
-  border-color: #374432;
-  color: #374432!important;
+  border-color: #013D25;
+  color: #013D25!important;
 }
 
 .controls .btn {
@@ -1184,7 +1236,7 @@ button:focus {
 }
 
 .iconoServicio{
-  width: 200px;
+  height: 200px;
 }
 
 .item-boxes h4 {
@@ -1278,7 +1330,7 @@ button:focus {
 }
 
 #features .btn {
-  background-color: #374432;
+  background-color: #013D25;
   padding: 15px 60px 15px 60px;
   border-radius: 70px;
   font-size: 20px;
@@ -1354,7 +1406,7 @@ button:focus {
 }
 
 #about .btn {
-  background-color: #374432;
+  background-color: #013D25;
   padding: 15px 60px 15px 60px;
   border-radius: 70px;
   font-size: 20px;
@@ -1403,8 +1455,8 @@ button:focus {
 }
 
 .featured-box .featured-content h4 {
-  font-size: 18px;
-  margin-bottom: 10px;
+  font-size: 22px;
+  margin-bottom: 5px;
   transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
@@ -1412,14 +1464,14 @@ button:focus {
 }
 
 .featured-box .featured-content p {
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 500;
   margin-bottom: 20px;
 }
 
 .nosotros{
-  font-size: 20px!important;
-  line-height: 30px;
+  font-size: 26px!important;
+  font-weight: 500!important;
 }
 /* ==========================================================================
  Team Section
@@ -1605,12 +1657,28 @@ button:focus {
 }
 
 .owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span {
-  background: #37422B;
+  background: #013D25;
 }
 
 /* ==========================================================================
   Pricing Table
   ========================================================================== */
+  #galeria {
+    background-image: url(../img/about/fondo\ galeria-01.png);
+    background-size: 100%;
+  }
+
+#galeria .btn {
+  background-color: #013D25;
+  padding: 15px 60px 15px 60px;
+  border-radius: 70px;
+  font-size: 20px;
+}
+
+#galeria .col-12 {
+  padding-left: 0px!important;
+}
+
   #pricing {
     background-image: url(../img/pricing/fondo\ nuevo-01.png);
     background-size: 100%;
@@ -1626,7 +1694,7 @@ button:focus {
   margin: 0 auto;
   margin-bottom: 5px;
   text-align: center;
-  background-color: #FCEBE7;
+  background-color: #FFE6C2;
   box-shadow: 0px 10px 50px 0px rgba(61, 40, 42, 0.15);
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
@@ -1640,7 +1708,7 @@ button:focus {
 
 .pricing-table .pricing-details h2 {
   font-size: 36px;
-  color: #65652C;
+  color: #013D25;
   font-weight: 700;
   padding-bottom: 15px;
   margin-top: -20px;
@@ -1653,8 +1721,7 @@ button:focus {
 .pricing-table .pricing-details ul li {
   margin-top: 10px;
   padding: 6px;
-  font-size: 14px;
-  font-weight: bolder;
+  font-size: 18px;
   color: #393A3A;
   line-height: 10px;
 }
@@ -1665,7 +1732,7 @@ button:focus {
 }
 
 .plan-button .btn {
-  background-color: #37422B;
+  background-color: #013D25;
 }
 
 .pricing-big {
@@ -1679,7 +1746,7 @@ button:focus {
   height: auto;
   max-width: 100%;
   padding: 50px;
-  background-color: #FDEBE8;
+  background-color: #FFE6C2;
   margin-top: -30px;
 } 
 
@@ -1692,7 +1759,7 @@ button:focus {
    ========================================================================== */
 #carousel-area {
   overflow: hidden;
-  background: #fff;
+  background: #C1DEBC;
 }
 
 #carousel-area .carousel-item {
@@ -1804,7 +1871,7 @@ button:focus {
 #slider-area .btn {
   margin-right: 15px;
   margin-top: 55px;
-  background-color: #374432;
+  background-color: #013D25;
   padding: 20px 80px 20px 80px;
   border-radius: 70px;
   font-size: 25px;
@@ -2182,7 +2249,7 @@ textarea {
 .form-control:focus {
   color: #212121;
   background-color: #fff;
-  border-color: #374432;
+  border-color: #013D25;
   box-shadow: none;
   outline: 0;
 }
@@ -2205,7 +2272,7 @@ textarea {
 
 #subscribe .sub-item-box .icon-box i {
   font-size: 30px;
-  color: #374432;
+  color: #013D25;
 }
 
 #subscribe .sub-item-box .text-box {
@@ -2374,7 +2441,7 @@ footer .menu li a:hover {
 }
 
 #copyright .nav-inline .nav-link:hover {
-  color: #606538;
+  color: #013D25;
 }
 
 /* ==========================================================================
